--- a/PetzeyPetDTOs/PetzeyPetDTOs.csproj
+++ b/PetzeyPetDTOs/PetzeyPetDTOs.csproj
@@ -61,6 +61,7 @@
   <ItemGroup>
     <Compile Include="AddImgUrlDto.cs" />
     <Compile Include="AddOwnerDto.cs" />
+    <Compile Include="AddProfilePicDto.cs" />
     <Compile Include="EditOwnerDto.cs" />
     <Compile Include="PetAppDto.cs" />
     <Compile Include="AddPetDto.cs" />
