--- a/PetzeyPetBusinessLayer/PetzeyPetBusinessLayer.csproj
+++ b/PetzeyPetBusinessLayer/PetzeyPetBusinessLayer.csproj
@@ -61,11 +61,10 @@
   <ItemGroup>
     <Compile Include="IPetBll.cs" />
     <Compile Include="IPetOwnerBll.cs" />
-    <Compile Include="IRegexFactory.cs" />
     <Compile Include="PetBll.cs" />
     <Compile Include="PetOwnerBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegexFactory.cs" />
+    <Compile Include="Validators\Validator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
