--- a/PetzeyPetApi/packages.config
+++ b/PetzeyPetApi/packages.config
@@ -28,15 +28,17 @@
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Log4Net.AspNetCore" version="6.1.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="2.2.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="2.2.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.25.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.JsonWebTokens" version="5.5.0" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Logging" version="5.5.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.25.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocol.Extensions" version="1.0.4.403061554" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocols" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocols.OpenIdConnect" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Protocols.WsFederation" version="5.5.0" targetFramework="net48" />
-  <package id="Microsoft.IdentityModel.Tokens" version="5.5.0" targetFramework="net48" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.25.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Tokens.Saml" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.IdentityModel.Xml" version="5.5.0" targetFramework="net48" />
   <package id="Microsoft.OData.Core" version="7.12.2" targetFramework="net48" />
@@ -52,7 +54,7 @@
   <package id="Microsoft.Spatial" version="7.12.2" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="Swashbuckle" version="5.2.1" targetFramework="net48" />
   <package id="Swashbuckle.Core" version="5.2.1" targetFramework="net48" />
@@ -63,11 +65,12 @@
   <package id="System.IdentityModel.Tokens.Jwt" version="5.5.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net48" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net48" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="4.7.2" targetFramework="net48" />
-  <package id="System.Text.Json" version="4.6.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="4.7.2" targetFramework="net48" />
   <package id="System.Threading" version="4.0.11" targetFramework="net48" />
   <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
