--- a/PetzeyPetApi/packages.config
+++ b/PetzeyPetApi/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net48" />
   <package id="AutoMapper" version="10.1.1" targetFramework="net48" />
   <package id="bootstrap" version="3.4.1" targetFramework="net48" />
+  <package id="Castle.Core" version="5.1.0" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
   <package id="log4net" version="2.0.15" targetFramework="net48" />
@@ -54,6 +55,7 @@
   <package id="Microsoft.Spatial" version="7.12.2" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Modernizr" version="2.8.3" targetFramework="net48" />
+  <package id="Moq" version="4.18.2" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
   <package id="Owin" version="1.0" targetFramework="net48" />
   <package id="Swashbuckle" version="5.2.1" targetFramework="net48" />
