--- a/PetzeyPetApi/packages.config
+++ b/PetzeyPetApi/packages.config
@@ -7,6 +7,7 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="jQuery" version="3.4.1" targetFramework="net48" />
   <package id="log4net" version="2.0.15" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.OData" version="7.6.1" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
@@ -14,6 +15,7 @@
   <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net48" />
