--- a/PetzeyPetApi/Web.config
+++ b/PetzeyPetApi/Web.config
@@ -18,13 +18,18 @@
     </root>
     <appender name="File" type="log4net.Appender.FileAppender">
       <appendToFile value="true" />
-      <file value="C:\Users\Admin\PetzeyPetModule\PetzeyPetApi\logs.txt" />
+      <file value="Log4Net\logs.log" />
       <rollingStyle value="Date" />
       <datePattern value="yyyyMMdd-HHmm" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date %-5level %logger.%method [%line] - MESSAGE: %message%newline" />
       </layout>
     </appender>
+	  <appender name="Console" type="log4net.Appender.ConsoleAppender">
+		  <layout type="log4net.Layout.PatternLayout">
+			  <conversionPattern value="%-5date %-5level [%thread] %type.%method:%line - %message%newline" />
+		  </layout>
+	  </appender>
   </log4net>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PetDb2;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
