--- a/PetzeyPetApi/Web.config
+++ b/PetzeyPetApi/Web.config
@@ -32,7 +32,7 @@
 	  </appender>
   </log4net>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PetDb2;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PetDb;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="ida:ClientId" value="b6973a3c-ec31-460b-95a1-98c4414847fb" />
