--- a/PetzeyPetBusinessLayer/PetzeyPetBusinessLayer.csproj
+++ b/PetzeyPetBusinessLayer/PetzeyPetBusinessLayer.csproj
@@ -81,7 +81,13 @@
     <Compile Include="PetBll.cs" />
     <Compile Include="PetOwnerBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Validators\Validator.cs" />
+    <Compile Include="Validators\BloodGroupValidator.cs" />
+    <Compile Include="Validators\EmailValidator.cs" />
+    <Compile Include="Validators\ImageUrlValidator.cs" />
+    <Compile Include="Validators\IValidator.cs" />
+    <Compile Include="Validators\LocationValidator.cs" />
+    <Compile Include="Validators\PhoneNumberValidator.cs" />
+    <Compile Include="Validators\ValidatorFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
